# council-of-experts-research

./: .env.example  .gitignore  Council_of_Experts_v5_FineTunedCabinet.docx  IMPLEMENTATION_PLAN.md  README.md  RUNBOOK_DPO_PROMPT_TRANSFER.md  RUNBOOK_PAPER_HARDENING.md  RUNBOOK_SWAP_MATRIX.md  netlify.toml  pyproject.toml
bench/: __init__.py  __main__.py  anthropic_client.py  cost_guard.py  dpo_experiment.py  gptoss_council.py  gptoss_single.py  import_run.py  local_swap.py  opus_council.py  opus_single.py  opus_swap.py  runner.py  upgraded_council.py
bench/runs/imported/: 20260514T151653Z__case_4_glp1_employer_coverage__opus-council.json  20260514T152204Z__case_4_glp1_employer_coverage__opus-single.json  20260514T163602Z__case_2_cross_border_digital_therapeutic__opus-single.json  20260514T164306Z__case_2_cross_border_digital_therapeutic__local-council.json  20260514T164306Z__case_4_glp1_employer_coverage__local-council.json  20260514T165101Z__case_2_cross_border_digital_therapeutic__opus-council.json  20260605T140559Z__case_4_glp1_employer_coverage__swap-healthcare-phi4.json  20260605T151447Z__case_1_clinical_decision_support__gptoss-single.json  20260605T151447Z__case_2_cross_border_digital_therapeutic__gptoss-single.json  20260605T151447Z__case_3_capitated_risk_contract__gptoss-single.json  20260605T151447Z__case_4_glp1_employer_coverage__gptoss-single.json  (+347 more)
council/: __init__.py  __main__.py  cabinet.py  models.py  orchestrator.py  prompts.py  thermal.py
docs/: PAPER_DRAFT.md  RUN_LEDGER.md  paper.tex
examples/: __init__.py  test_cases.py
exp/: ClaudeSingleShot.md
modelfiles/: qwen-finance.Modelfile
scripts/: build_site.py
server/: __init__.py  __main__.py  app.py  runs.py
server/static/: architecture.html  cells.html  index.html  process.html  results.html
site/: architecture.html  cells.html  process.html  results.html  routes.html
site/data/: prompts.json
tests/: test_bench.py
train/: build_ledger.py  domains.py  gen_pairs.py  med42-orpo.Modelfile  med42-repro.Modelfile  rescore_split.py  resume_v2.sh  run_cell2.sh  run_cell3_health.sh  run_cell3_health_finish.sh  run_cell6.py  run_phase3.sh  run_phase3_v2.sh  run_sft_control.sh  saul-dpo-v2.Modelfile  saul-dpo.Modelfile  saul-repro.Modelfile  saul-sft.Modelfile  saul.modelfile.fragment
train/data/: dpo_pairs_health_raw.jsonl  dpo_pairs_raw.jsonl
(+29 files in other folders)
